fix for player select visibility

--- a/static/style.css
+++ b/static/style.css
@@ -72,6 +72,10 @@ select {
     cursor: pointer;
 }
 
+select option {
+    color: black;
+}
+
 .button, .delete-button {
     cursor: pointer;
     border-radius: 12px;
